# FI-JEPA

./: .gitignore  AGENTS.md  FI_JEPA_EVALUATION_UPDATE_PLAN.md  FI_JEPA_MODEL_ARCHITECTURE_PLAN.md  FI_JEPA_PROBE_REBUILD_PLAN.md  FI_JEPA_SYSTEM_PLAN.md  README.md  pyproject.toml
configs/: dataloader.yaml  features.yaml  model.yaml  model_dataset.yaml  pretraining.yaml  sources.yaml  targets.yaml  universe.yaml
data/: DATABASE_SCHEMA.md  DATASET_PLAN.md
data/community_universes/: dow30_changes.csv  dow30_current.csv  nasdaq100_changes.csv  nasdaq100_current.csv  sp500_changes.csv  sp500_current.csv
docs/: data_builder.md  probes.md
src/dataset_pipeline/: __init__.py  alignment.py  build_market_database.py  calendar.py  checks.py  community_universes.py  cross_sectional_features.py  database_io.py  fred_loader.py  import_fred_data.py  import_stooq_archives.py  macro_features.py  market_features.py  stooq_loader.py  symbol_manifest.py  targets.py
src/fi_jepa/: __init__.py  losses.py  model.py  model_config.py  model_output.py  model_validation.py  probes.py  representation.py  schedulers.py  tokenizer.py  training.py  training_config.py  (+2 more)
tests/: test_community_universes.py  test_dataset_pipeline.py  test_fi_jepa_dataloader.py  test_fi_jepa_losses.py  test_fi_jepa_model.py  test_fi_jepa_representation_probes.py  test_fi_jepa_training.py  test_fi_jepa_validation.py  test_fred_loader.py  test_latent_factor_analysis.py  test_model_dataset_builder.py  test_probe_model_selection.py  test_probe_residualization.py  test_probe_summary.py  test_stooq_archive_loader.py
(+25 files in other folders)
